// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicRevenueTooltip /> should render correctly 1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef>
        Revenue
      </ForwardRef>
      <ForwardRef>
        $100.00
      </ForwardRef>
    </React.Fragment>
  }
  headerComponent={
    <ForwardRef>
      2018-06-18T15:47:45.706Z @MMM DD, YYYY
    </ForwardRef>
  }
/>
`;

exports[`<PeriodicRevenueTooltip /> should render correctly when active is false 1`] = `""`;

exports[`<PeriodicRevenueTooltip /> should render correctly when no payload is passed 1`] = `""`;

exports[`<PeriodicRevenueTooltip /> should render correctly with different dateformats  1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef>
        Revenue
      </ForwardRef>
      <ForwardRef>
        $100.00
      </ForwardRef>
    </React.Fragment>
  }
  headerComponent={
    <React.Fragment>
      <ForwardRef>
        2018-06-18T15:47:45.706Z @MMM DD, YYYY
      </ForwardRef>
      <ForwardRef>
        2018-06-18T15:47:45.706Z @hh:mm a
      </ForwardRef>
    </React.Fragment>
  }
/>
`;
